# app_sotisimmo

./: .gitignore  1_🏠_Home.py  DEPLOY.md  DEPLOYMENT.md  DOMAIN.md  Dockerfile  Procfile  README.md  app.py  dept_data.csv  docker-compose.yaml  docker-compose.yml  firestore-key.json  main.py  pyproject.toml  requirements.txt  setup.sh
.streamlit/: config.toml
derivatives/: summarized_data.ipynb
derivatives/_archives/: main2.py  main_spark.py
modules/: calculs.py  config.py  config_env.py  data_loader.py  decorators.py  plots.py
modules/AI/: GPT.py
modules/GUI/: home.py  plotter.py  ui_components.py
modules/utils/: decorators.py  utils.py
notebooks/: summarized_data.ipynb
src/: calculs.py  config.py  data_loader.py
src/AI/: GPT.py
src/GUI/: home.py  plotter.py  ui_components.py
src/components/charts/: plotter.py
src/config/: config.py  departments.py  property_types.py  years.py
src/core/data/: loader.py
src/display/: plotter.py  properties.py
src/utils/: config.py
templates/: google_analytics.html  index.html
utils/: calculs.py
