[project]
name = "app-sotisimmo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "openai==1.65.4",
    "plotly>=6.0.1",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = []
