[project]
name = "app-sotisimmo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "openai>=1.76.0",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
    "hdbscan>=0.8.33",
    "folium>=0.15.1",
    "branca>=0.6.0",
]
